# slcwindinversion

./: .flake8  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
ci/requirements/: docs.yaml  environment.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
slcwindinversion/: __init__.py  cli.py  mainslcwindinversion.py  slcwindinversion.py  utils.py
tests/: __init__.py  test_output_name.py  test_slcwindinversion.py
